--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "dependencies": {
     "@code-bucket/board-game-geek": "github:spiotr12/board-game-geek",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "axios": "^1.3.0",
