--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "axios": "^1.3.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
@@ -32,6 +33,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.0",
     "stream-browserify": "^3.0.0",
+    "string-similarity-js": "^2.1.4",
     "util": "^0.12.5"
   },
   "devDependencies": {
