--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
+    "deploy": "npm run build && firebase deploy",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx",
     "watch": "tsc --watch --noEmit"
@@ -25,7 +26,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "firebase": "^9.17.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,11 +37,12 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.191",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "rollup-plugin-visualizer": "^5.9.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
