--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "firebase": "^9.17.1",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
     "lodash-es": "^4.17.21",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.0",
+    "react-i18next": "^12.1.5",
     "stream-browserify": "^3.0.0",
     "string-similarity-js": "^2.1.4",
     "util": "^0.12.5"
