--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.0",
     "react-i18next": "^12.1.5",
+    "react-router-dom": "^6.9.0",
     "stream-browserify": "^3.0.0",
     "string-similarity-js": "^2.1.4",
     "util": "^0.12.5"
