--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash-es": "^4.17.21",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
+    "react-circle-flags": "^0.0.18",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.0",
